--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -14,17 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Myactionbar" >
         <activity
-            android:name="il.co.onthefly.SplashActivity"
+            android:name=".SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="il.co.onthefly.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
